v2.0/markdown/asct-b/asct-b-vh-pancreas.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Pancreas v1.3

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts. 

Minor revisions were made in Pancreas v1.3 to ensure all cell types were mapped to Cell Ontology or had a parent cell type that mapped to Cell Ontology and genes and proteins were mapped to the Human Gene Ontology (HUGO) Gene Nomenclature Committee (HGNC). 

Pancreas, v1.2, listed anatomical structures and cell types in the pancreas head region which are analogous to those for the pancreas neck, body and tail regions. Detailed annotation of the pancreas region will reduce redundancies in anatomical structure and cell type nomenclature representative of all pancreas regions and will improve visualization by the ASCT+B reporter by reducing multiple converging lines for a given structure or cell type from multiple regions.. 

Pancreas anatomical structures were named according to standard references [Pancreapedia Anatomy and Histology of the Pancreas, Pancreapedia v2.0](https://www.pancreapedia.org/reviews/anatomy-and-histology-of-pancreas) from the American Pancreatic Association; Cruickshank, A.H. and Benbow, E.W. (1995), Pathology of the pancreas, 2nd ed.. London UK: Springer; Ross, M. H., & Pawlina, W. (2010). Histology: A text and atlas, with correlated cell and molecular biology (6th ed.). Baltimore, MD: Lippincott Williams & Wilkins.). Uberon and Cell Ontology entries were then reviewed and used specific to pancreas as available. Cell types were also referenced to the Human Protein Atlas for protein abundance in the pancreas.

The table begins with division of the pancreas into dorsal and ventral lobes. The dorsal lobe of the pancreas comprises the anterior superior region of head region as well as the neck, body and tail regions. The ventral lobe of the pancreas is found exclusively in the head region and is the major source of pancreatic polypeptide cells found in islets of the ventral head region. Within each region, lobules are formed that are further divided into parenchyma followed by exocrine and endocrine pancreas with specific cell types.    

Important findings from scRNAseq studies show division of most cell types into subtypes based on unique RNA signatures.  

Immune cells are included although they are found in low numbers as part of the innate immune system of the health control pancreas. The vascular, lymphatic, and nervous systems will be added in future versions.  


| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Martha Campbell-Thompson; Adel Eskaros; Diane Saunders |
| **Creator ORCID(s):** | [0000-0001-6878-1235](https://orcid.org/0000-0001-6878-1235); [0000-0001-9028-338X](https://orcid.org/0000-0001-9028-338X); [0000-0002-8849-6746](https://orcid.org/0000-0002-8849-6746) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Internal Reviewer(s):** | Al Powers; Clayton Mathews; Angela Kruse; Ellen M. Quardokus  |
| **Internal Reviewer ORCID(s):** |[0000-0003-1941-5786](https://orcid.org/0000-0003-1941-5786); [0000-0002-8817-6355](https://orcid.org/0000-0002-8817-6355); [0000-0001-8776-2769](https://orcid.org/0000-0001-8776-2769); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **External Reviewer(s):** |Diego Balboa |
| **External Reviewer ORCID(s):** | [0000-0002-4784-5452](https://orcid.org/0000-0002-4784-5452)|
| **Creation Date:** | 2023-12-15 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD033756; OT2OD026671 |
| **HuBMAP ID:** | HBM336.TBNP.923 |
| **Data Table:** | [Pancreas v1.3](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/asct-b-vh-pancreas.csv) |
| **DOI:** |[https://doi.org/10.48539/HBM336.TBNP.923](https://doi.org/10.48539/HBM336.TBNP.923) |
| **How to Cite This Data Table:** | Martha Campbell-Thompson; Adel Eskaros; Diane Saunders, HuBMAP ASCT+B Tables. Pancreas v1.3 https://doi.org/10.48539/HBM336.TBNP.923, Accessed on December 15, 2023. |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on December 15, 2023. |
